# AI

./: README.md  main.py  pyproject.toml  requirements.txt
api/: main.py
cnn_model/: __init__.py  extract.py  model.py  train.py
config/: model_config.yaml  risk_config.yaml
dashboard/frontend/: index.html
data_engine/: __init__.py  fetcher.py  labeler.py  validator.py
fusion_model/: __init__.py  predict.py  shap_explainer.py  train.py
image_engine/: __init__.py  augmentations.py  renderer.py
smc_engine/: __init__.py  features.py  fvg.py  impulse.py  liquidity.py  market_state.py  order_blocks.py  structure.py
