[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-ai-system"
version = "1.0.0"
description = "CNN + SMC + XGBoost trading signal predictor from chart images"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch==2.1.0",
    "torchvision==0.16.0",
    "timm==0.9.10",
    "xgboost==2.0.0",
    "scikit-learn==1.3.0",
    "fastapi==0.104.0",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "numpy==1.24.3",
    "pandas==2.1.0",
    "Pillow==10.0.0",
    "opencv-python==4.8.0",
    "pyyaml==6.0.1",
    "shap==0.43.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=23.9.0", "mypy>=1.5.0"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
